Atualização grande de interface e integração com google auth, funcionialidades melhoradas e resolução de bugs, QoL melhorado